--- a/cs261/cs261.md
+++ b/cs261/cs261.md
@@ -11,6 +11,16 @@ I'm just gonna record some of my mnemonics here, no real notes. Recommend https:
 - Validation - checking software does what the customer asked
 - Evolution - how the software changes over time
 
+## Waterfall Model
+
+**Rivers Suck In Infant Orangutans**
+
+- Requirement analysis
+- System Design
+- Implementation and Unit Testing
+- Integration and Validation
+- Operation and Maintenance
+
 ## Requirements Engineering
 
 **FEAS-V**
@@ -61,3 +71,58 @@ I'm just gonna record some of my mnemonics here, no real notes. Recommend https:
 
 ## Human Computer Interaction Key Points
 
+**Mat Ate A Cheese**
+
+- Memory
+- Attention
+- Afordances
+- Cognition
+
+## Norman Human Act Cycle
+
+**Feeding Insects Protein Eradicates Fertitlity in Insects Entirely**
+
+- Form a goal
+- Incentive to act
+- Plan to act
+- Execute plan
+- Feedback received
+- Interpret feedback
+- Evaluate feedback
+
+## Gestal Human Laws
+
+**Fleeing Curiously Small People Cures Cancer Fast**
+
+- Foreground
+- Closure (make shapes)
+- Similar objects
+- Proximity
+- Common region
+- Continuity
+- Focal point
+
+## Neilson Usability Principles
+
+**HM CHAUFER-V** Her Majesty's CHAUFER-V
+
+- Help users recover from errors
+- Match real world ith system
+- Consistent and standardised
+- Help and documentation available
+- Aesthetic
+- User control
+- Flexibility
+- Error prevention
+- Recognition not recall
+- Visibility
+
+## User Acceptance Testing Process
+
+**Dave Punched Dino, Never Again**
+
+- Define acceptance criteria
+- Plan acceptance test
+- Derive acceptance tests
+- Negotiate results
+- Accept/reject system
