--- a/cs261/cs261.md
+++ b/cs261/cs261.md
@@ -1,8 +1,9 @@
 # Mnemonics
 
 I'm just gonna record some of my mnemonics here, no real notes. Recommend https://www.joeyh.dev/notes for good ones.
+Some of them use things specific to me so maybe won't be as useful to you :/
 
-## Software Process
+## Software Processes
 
 **S-DIVE** - all software process models have these stages:
 
@@ -41,7 +42,7 @@ I'm just gonna record some of my mnemonics here, no real notes. Recommend https:
 
 ## Requirement Set Qualities
 
-**Mat Pet Tammy's Coat** (this works for me as my cat is called Tammy, possibly won't for anyone else :/)
+**Mat Pet Tammy's Coat**
 
 - Modifiable - must be able to revise the set of requirements when necessary
 - Prioritised - assign an implementation priority to each requirement to indicate its necessity compared to other requirements
@@ -75,7 +76,7 @@ I'm just gonna record some of my mnemonics here, no real notes. Recommend https:
 
 - Memory
 - Attention
-- Afordances
+- Affordances
 - Cognition
 
 ## Norman Human Act Cycle
@@ -90,17 +91,17 @@ I'm just gonna record some of my mnemonics here, no real notes. Recommend https:
 - Interpret feedback
 - Evaluate feedback
 
-## Gestal Human Laws
+## Gestalt Human Laws
 
 **Fleeing Curiously Small People Cures Cancer Fast**
 
-- Foreground
-- Closure (make shapes)
-- Similar objects
-- Proximity
-- Common region
-- Continuity
-- Focal point
+- Foreground - we tend to segment vision into foreground (focus) and background objects
+- Closure - try to form single shapes/patterns by grouping complex ones
+- Similar objects - if objects look similar, assume they behave in similar ways
+- Proximity - if objects are close, we assume they are related/behave similarly
+- Common region - objects that are in enclosed areas are perceived as related
+- Continuity - objects in a line/smooth curve are perceived as related
+- Focal point - drawn to objects that are unique/stand out in an image
 
 ## Neilson Usability Principles
 
@@ -126,3 +127,56 @@ I'm just gonna record some of my mnemonics here, no real notes. Recommend https:
 - Derive acceptance tests
 - Negotiate results
 - Accept/reject system
+
+## SOLID OOP Design Principles
+
+**SOLID**
+
+- Single Responsibility - a class is responsible for a singl pieve of functionality, encapsulating all needed data/methods
+- Open/Closed - open for extension, closed for modification
+- Liskov Substitution - child classes can be used as their parent class without the object using it knowing
+- Interface segregation - many specific interfaces are better than a general interface, with no code required that will not be used.
+- Dependency inversion - high-level classes should not rely on many functions of low level classes, with interactions going from low level to high level while depending on well defined interfaces.
+
+## Mitigating software errors
+
+**GDDR** like GDPR
+
+- Graceful Degredation - allows some services to keep functioning while others fail
+- Diversity - having components use different tools/systems to prevent similar errors/failures in all components
+- Redundancy - having older/alternative services that can be used if the main one fails
+
+## Creational Software Patterns
+
+**Factories build Protoypes**
+
+- Factories - builds a specific object (usually made of smaller objects so requires lots of code) fast.
+- Builder - builds a customisable object based on the methods called
+- Prototype - builds a single object at the start which is then cloned to make more
+
+## Structural Software Patterns
+
+**FAP Daily**
+
+- Flyweight - many objects share the same properties, store only one copy and make references in all objects
+- Adaptor - Convert data format/interaction to allow use with other services
+- Proxy - reference object without instantiating it - placeholder for the real object which is only called when needed, e.g. store video proxy when loading multiple videos that could be chosen and only bring full video into memory when clicked
+- Decorator - adds new behaviour to objects, alternative to subclasses. Wraps original object and extends functionality
+
+## Behavioural Software Patterns
+
+**I Make Shit Options**
+
+- Iterator - traverses a container to access elements in order without exposing data structure
+- Memento - save and restore objects to previous versions - objects make a snapshot of itself and stores in a *memento* object thats stored externally
+- Strategy - select method to complete a task at runtime - strategy object is used for decision making and can be swapped out
+- Observer - objects dependant on other objects are notified if state change occurs, can be push to dependants or wait for dependant to pull changes
+
+## Architectural Software Patterns
+
+**Mat Really Likes Property**
+
+- MVC - model view controller: model stores system state/data, view is what is shown to the user, controller interprets user actions and passes them to model to update state/data
+- Repository - central repository stores all data in system, subsystems don't often interact directly but instead make changes to repository that affects each other
+- Layered - system in layers that provide services to the layer above and use those from the layer below
+- Pipe and filter - data input to pipe, discrete processing components filter data as it flows down pipe, transforming input data to produce output
