--- a/cs261/cs261.md
+++ b/cs261/cs261.md
@@ -26,10 +26,10 @@ Some of them use things specific to me so maybe won't be as useful to you :/
 
 **FEAS-V**
 
-- Feasibility Report - is the general idea possible
-- Elicitation and Analysis - finding requirements and analysing them - organisation, prioritisation, etc
-- Specification - creating the document with the final set of requirements
-- Verification - checking with the customer that the requirements are acceptable
+- Feasibility Study - is the general idea possible, **produces feasibility report**
+- Elicitation and Analysis - finding requirements and analysing them - organisation, prioritisation, etc, **produces system models**
+- Specification - creating the document with the final set of requirements, **produces user/system requirements list**
+- Validation - checking with the customer that the requirements are acceptable, **produces requirements document**
 
 ### Elicitation and Analysis
 
