--- a/cs261/cs261.md
+++ b/cs261/cs261.md
@@ -112,7 +112,7 @@ Some of them use things specific to me so maybe won't be as useful to you :/
 - Consistent and standardised
 - Help and documentation available
 - Aesthetic
-- User control
+- User control - giving users control
 - Flexibility
 - Error prevention
 - Recognition not recall
