--- a/cs261/cs261.md
+++ b/cs261/cs261.md
@@ -89,7 +89,7 @@ Some of them use things specific to me so maybe won't be as useful to you :/
 - Execute plan
 - Feedback received
 - Interpret feedback
-- Evaluate feedback
+- Evaluate outcome
 
 ## Gestalt Human Laws
 
